# coapi.rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md
coapi-frontend/: about.html  create_question.html  index.html  view_question.html  view_questions.html
coapi-frontend/scripts/: coide.js  constants.js  create_question.js  main.js  view_question.js  view_questions.js
coapi-frontend/styles/: create_problem.css  styles.css  view_question.css  view_questions.css
code/python-code/: code.py  runner.py
src/: lib.rs  main.rs
src/language_client/python_client/: mod.rs  python_client.rs
src/language_servers/python_ls/: client.py  server.py
src/runner/: mod.rs
src/runner/console_run/: mod.rs  python_console_run.rs
src/runner/docker_build/: docker_build_python.rs  mod.rs
src/runner/docker_run/: docker_python_execution.rs  mod.rs
src/web_server/: axum_serve.rs  mod.rs
src/web_server/database/: mod.rs  mongo_funcs.rs
src/web_server/ssrenderer/: mod.rs  ssrenderer.rs
src/web_server/test_python3/: mod.rs  test_python3.rs
src/web_server/utils/: communications.rs  generate_markdown.rs  generate_python_binding.rs  get_question_template.rs  mod.rs  temp_utils.rs
src/web_server/web_funcs/: mod.rs
src/web_server/web_funcs/create_problems/: mod.rs  submit_problem.rs
test_code/: ABOUT.md
test_code/generator_python/: generate.py  gentypes.py  runner.py  test1.py
