[package]
name = "coapi_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "ws"] }
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
axum-extra = "0.9.4"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
bson = { version = "2", features = ["chrono-0_4"] }
http = "1.1.0"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
